--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
 
   shared_preferences: ^2.1.1
 
+  image_picker: ^0.8.7+5
+  dio: ^5.2.0+1
+  image_cropper: ^4.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
